--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(Algorithm)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Algorithm main.cpp)
+add_executable(1-prime #-Math/class1/1-prime.cpp)
